[package]
name = "classic-rust-generator"
version = "0.1.0"
authors = ["nghuyenthevinh2000 <nghuyenthevinh@gmail.com>"]
edition = "2018"

[dependencies]
prost = "0.11"
prost-build = "0.11"
tonic = "0.9"
tonic-build = "0.9"
regex = "1"
walkdir = "2"

[[bin]]
path = "main.rs"
name = "classic-rust-generator"