[package]
description = "CosmWasm integration testing for Classic"
edition = "2021"
license = "MIT OR Apache-2.0"
name = "classic-test-tube"
repository = "https://github.com/classic-terra/classic-rust"
version = "0.2.1"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
publish = true
keywords = ["terra-money", "classic", "cosmos-sdk", "testing", "blockchain"]

exclude = [
  "test_artifacts",
]

[dependencies]
base64 = "0.21.5"
cosmrs = {version = "0.9.0", features = ["cosmwasm"]}
classic-rust = {version = "0.2.0", path = "../proto"}
cosmwasm-std = "1.1.2"
prost = "0.11.0"
serde = "1.0.144"
serde_json = "1.0.85"
classic-core-test-tube = { version = "0.2.0", path = "../packages/test-tube" }
thiserror = "1.0.34"

[build-dependencies]
bindgen = "0.60.1"

[dev-dependencies]
cw1-whitelist = "0.15.0"
rayon = "1.5.3"
