[package]
name = "classic-rust"
version = "0.1.0"
authors = ["nghuyenthevinh2000 <nghuyenthevinh@gmail.com>"]
edition = "2021"
publish = true
repository = "https://github.com/classic-terra/classic-rust"
description = "Protobuf struct defintions for interacting with Terra Classic"
readme = "README.md"
license = "Apache-2.0"
keywords = ["terra-money", "classic", "cosmos-sdk", "proto", "blockchain", "bitcoinboyz"]

[dependencies]
prost = "0.11"
prost-types = "0.11"
tendermint-proto = "0.32"
cosmos-sdk-proto = "0.14.0"
cosmwasm-std = {version = "1.1", features = ["stargate"]}
schemars = "0.8.8"
serde = {version = "1.0", default-features = false, features = ["derive"]}
serde-cw-value = "0.7.0"
chrono = {version = "0.4.22", default-features = false}
osmosis-std-derive = "0.16.0"

# Optional dependencies
tonic = { version = "0.9", optional = true, default-features = false, features = ["codegen", "prost"] }

[features]
default = ["grpc-transport"]
grpc = ["tonic"]
grpc-transport = ["grpc", "tonic/transport"]
cosmwasm = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }